--- a/14 - JavaScript References VS Copying/index-MINE.html
+++ b/14 - JavaScript References VS Copying/index-MINE.html
@@ -8,43 +8,93 @@
 
   <script>
     // start with strings, numbers and booleans
+    // let age = 100;
+    // let age2 =  age;
+    // console.log(age, age2);
+    // age = 200;
+    // console.log(age, age2);
+
+    // let name = 'Wes';
+    // let name2 = name;
+    // console.log(name, name2);
+    // name = 'wesley';
+    // console.log(name, name2);
 
     // Let's say we have an array
     const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
 
     // and we want to make a copy of it.
+    const team = players;
+    console.log(players, team);
 
     // You might think we can just do something like this:
+    team[3] = 'Lux';
+    console.log(players, team);
 
     // however what happens when we update that array?
-
     // now here is the problem!
-
     // oh no - we have edited the original array too!
-
     // Why? It's because that is an array reference, not an array copy. They both point to the same array!
 
     // So, how do we fix this? We take a copy instead!
+    const team2 = players.slice();
+    team2[3] = 'Chewie';
+    console.log(players, team2);
 
     // one day
 
-    // or create a new array and concat the old one in
 
-    // or use the new ES6 Spread
+    // or create a new array and concat the old one in
+    const team3 = [].concat(players);
+
+//2nd BEST WAY - or use the new ES6 Spread
+    const team4 = [...players];
+    team4[3] = "Tristan";
+    console.log(players, team4);
+//OR probably best way
+    const team5 = Array.from(players);
+    team5[3] = "Josh";
+    console.log(players, team5);
 
     // now when we update it, the original one isn't changed
 
     // The same thing goes for objects, let's say we have a person object
 
     // with Objects
+    const person = {
+        name: 'Wes Bos',
+        age: 80
+    };
 
     // and think we make a copy:
+    const person2 = person;
+    person2.age = 99;
+    console.log(person, person2);
 
     // how do we take a copy instead?
+    const person3 = Object.assign({}, person, {age: 70});
+    console.log(person, person3);
 
     // We will hopefully soon see the object ...spread
+    //const person4 = {...person};
+    //console.log(person, person4);
 
     // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
+    const wes = {
+        name: 'Wes',
+        age: 100,
+        social: {
+            twitter: '@wesbos',
+            facebook: 'wesbos.developer'
+        }
+    };
+
+    const dev = Object.assign({}, wes);
+
+    //worst case use - poor mans deep clone
+    const dev2 = JSON.parse(JSON.stringify(wes));
+
+    console.log(dev);
 
   </script>
 
