--- a/18 - Adding Up Times with Reduce/index-MINE.html
+++ b/18 - Adding Up Times with Reduce/index-MINE.html
@@ -182,6 +182,25 @@
     </li>
   </ul>
 <script>
+
+const items = Array.from(document.querySelectorAll('[data-time]'));
+
+const seconds = items
+  .map(item => item.dataset.time)
+  .map(item => {
+    const [mins, secs] = (item.split(':').map(Number));
+    return (mins * 60) + secs;
+  })
+  .reduce((total, nextSeconds) => total + nextSeconds);
+
+let secondsLeft = seconds;
+const hours = Math.floor(secondsLeft / 3600);
+secondsLeft = secondsLeft - (hours * 3600);
+const minutes = Math.floor(secondsLeft / 60);
+secondsLeft = secondsLeft - (minutes * 60);
+
+console.log(hours, minutes, secondsLeft);
+
 </script>
 </body>
 </html>
