--- a/21 - Geolocation/index-MINE.html
+++ b/21 - Geolocation/index-MINE.html
@@ -58,7 +58,18 @@
   </style>
   <script>
 
-    
+    const arrow = document.querySelector('.arrow');
+    const speed = document.querySelector('.speed-value');
+
+    navigator.geolocation.watchPosition((data) => {
+      console.log(data.coords.speed);
+      speed.textContent = (data.coords.speed).toFixed(2);
+      arrow.style.transform = `rotate(${data.coords.heading}deg)`;
+    }, (err) => {
+      console.log(err);
+      alert('Hey! Please allow loaction services.');
+    });
+
   
   </script>
 </body>
