--- a/23 - Speech Synthesis/index-MINE.html
+++ b/23 - Speech Synthesis/index-MINE.html
@@ -22,7 +22,7 @@
       <label for="pitch">Pitch:</label>
 
       <input name="pitch" type="range" min="0" max="2" step="0.1">
-      <textarea name="text">Hello! I love JavaScript 👍</textarea>
+      <textarea name="text">Hi! Tristan is an awesome coder and can do some pretty amazing things with JavaScript</textarea>
       <button id="stop">Stop!</button>
       <button id="speak">Speak</button>
 
@@ -40,35 +40,38 @@
   function populateVoices() {
     voices = this.getVoices();
     voicesDropdown.innerHTML = voices
-      .filter(voice => voice.lang.includes('en'))
-      .map(voice => `<option value="${voice.name}">${voice.name} (${voice.lang})</option>`)
-      .join('');
+    .filter(voice => voice.lang.includes('en-'))
+    .map(voice => `<option value="${voice.name}">${voice.name} (${voice.lang}) </option>`)
+    .join('');
   }
 
   function setVoice() {
     msg.voice = voices.find(voice => voice.name === this.value);
-    console.log(msg.voice);
     toggle();
   }
 
   function toggle(startOver = true) {
     speechSynthesis.cancel();
-    if (startOver) {
+    if(startOver) {
       speechSynthesis.speak(msg);
+      console.log('running');
     }
   }
 
   function setOption() {
-    console.log(this.name, this.value);
     msg[this.name] = this.value;
     toggle();
   }
 
   speechSynthesis.addEventListener('voiceschanged', populateVoices);
   voicesDropdown.addEventListener('change', setVoice);
-  options.forEach(option => option.addEventListener('change', setOption));
+  options.forEach(option => option.addEventListener('change', setOption ));
   speakButton.addEventListener('click', toggle);
   stopButton.addEventListener('click', () => toggle(false));
+
+
+
+
 
 </script>
 
